[UPD] Add status 501 (Not Implemented) handling
